# Computer_Network_Project

./: README.md
computer_network_proj1/: client  server  socket_client.c
phase1/: Makefile  README.md  client  demo.webm  run.sh  server  socket_client.cpp  socket_server.cpp
phase1/src/: socket_client.cpp  socket_sc.hpp  socket_server.cpp
phase2/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  download.sh  run.sh  server
phase2/database/data/: art.json  education.json  finance.json  medicine.json  politics.json  religion.json  science.json  sports.json  technology.json
phase2/database/metadata/: user.json
phase2/include/: httpm.hpp  jsonm.hpp  server.hpp
phase2/src/app/: audio.py  comment.py  demo.py  httpm.py  login.py  playVideo.py  video.py
phase2/src/server/: httpm.cpp  server.cpp
